@@ -27,9 +27,9 @@ $moduleDirName = basename(__DIR__);
 
 // ------------------- Informations ------------------- //
 $modversion = [
-    'version'             => 2.27,
+    'version'             => '2.27.0',
     'module_status'       => 'RC-1',
-    'release_date'        => '2021/07/27',
+    'release_date'        => '2022/02/20',
     'name'                => _MI_CONTACT_NAME,
     'description'         => _MI_CONTACT_DESC,
     'official'            => 0,
