@@ -1,4 +1,4 @@
-<h5>2.27 RC-1 NOT RELEASED</h5>
+<h5>2.27.0 RC-1 [2022-02-20]</h5>
 <hr>
 + fixed bug for default sender mail address, if there are no departments (goffy)
 + fixed bug with missing contact_skype in database (goffy)
@@ -9,6 +9,7 @@
 + added namespaces (mamba)
 + added BlocksAdmin (mamba)
 + various cosmetics (mamba)
++ index.html in /preloads (mamba)
 
 
 <h5>2.26 RC-1 [2017-08-09]</h5>
